<resources>
    <string name="app_name">AppWOW</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_offline_mode">Continue without registration</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="gallery">Gallery</string>
    <string name="slideshow">Slideshow</string>
    <string name="tools">Tools</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="title_activity_group">GroupActivity</string>
    <string name="title_activity_group_details">GroupDetailsActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_add_cost">Add new cost</string>
    <string name="user_statistics_string">Your statistics</string>
    <string name="groups_string">Groups</string>
    <string name="group_details_string">Group details</string>
    <string name="welcome_message">Welcome to AppWOW</string>
    <string name="request_for_fullname">Insert your name</string>
    <string name="save">Save</string>
    <string name="prompt_group_name">Group name</string>
    <string name="go_ahead_menu">Go ahead</string>
    <string name="create_group">Create</string>
    <string name="add">Add</string>
    <string name="err_no_connection">No connection</string>
    <string name="registration_message">Registration</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="title_activity_registration_activity">Registration</string>
    <string name="prompt_fullname">Fullname</string>
    <string name="email">email</string>
    <string name="select_image_group">Select a picture for the group</string>
    <string name="delete">Delete</string>
    <string name="suggerimento_nome_gruppi">Insert a group name and a photo (optional)</string>
    <string name="actual_members_string">Actual members</string>
    <string name="add_group_members_user_not_found">User not found</string>
    <string name="server_connection_error">Connection to server failed. Try again later.</string>
    <string name="error_invalid_group_name">Insert a valid name for the group</string>
    <string name="prompt_password_confirm">Confirm password</string>
    <string name="error_password_matching">Passwords do not match</string>
    <string name="message_nothing_to_show">Nothing to show</string>
    <string name="cost_detail_notes">Notes</string>
    <string name="payment_detail_payed_by">Payed by </string>
    <string name="cost_detail_date_preposition">On</string>
    <string name="prompt_payment_name">Purpose</string>
    <string name="prompt_cost_amount">Amount</string>
    <string name="prompt_payment_notes">Notes</string>
    <string name="action_add_payment_add_position">Find place with google</string>
    <string name="action_add_payment">Add payment</string>
    <string name="prompt_payment_position">Place</string>
    <string name="action_add_cost_delete_position">Delete place</string>
    <string name="transaction_fragment_empty_message">Nothing to show</string>
    <string name="payment_fragment_empty_message">No payments to show</string>
    <string name="add_cost_menu_item">Add payment</string>
    <string name="error_invalid_cost_name">Insert a valid name for the cost</string>
    <string name="error_invalid_amount">Insert an amount</string>
    <string name="you">You</string>
    <string name="add_payment_activity_title">New payment</string>
    <string name="add_group_activity_title">New group</string>
    <string name="add_group_members_activity_title">Add group members</string>
    <string name="add_group_members_user_already_added">User already added</string>
    <string name="add_member_button">Add</string>
    <string name="add_payment_success">Payment inserted successfully</string>
    <string name="add_payment_error">Unable to process the request, try again!</string>
    <string name="add_group_success">Group created successfully</string>
    <string name="add_group_error">Unable to process the request, try again!</string>
    <string name="add_group_take_photo">Take Photo</string>
    <string name="add_group_choose_photo_from_library">Choose from Library</string>
    <string name="add_group_cancel">Cancel</string>
    <string name="add_group_add_photo_title">Select Image</string>
    <string name="dialog_group_deleted_old">The group %1$s was deleted by %2$s! It will be also deleted from your device.</string>
    <string name="ok">OK</string>
    <string name="dialog_group_deleted_confirm">Group deleted</string>
    <string name="details">Details</string>
    <string name="payment_deleting_param">Deleting payment %1$s...</string>
    <plurals name="dialog_group_deleted">
        <item quantity="one"> 1 group deleted</item>
        <item quantity="other"> %d groups deleted</item>
    </plurals>
    <string name="undo">Undo</string>
    <string name="payment_delete_unsuccess_server_error">Unable to delete payment %1$s due to a server error</string>
    <string name="retry">Retry</string>
    <string name="payment_delete_unsuccess_network_error">Unable to delete payment %1$s due to a network error</string>
    <string name="payment_delete_title">Delete payment?</string>
    <string name="payment_delete_message">Do you want to delete the payment %1$s?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="payment_deleting">Deleting payment...</string>
    <string name="debt_settle_title">Mark as settled</string>
    <string name="debt_settle_message_creditor">Did %1$s give you %2$s?</string>
    <string name="debt_settle_message_debtor">Did you give %2$s to %1$s?</string>
    <string name="debt_settling">Settling debt...</string>
    <string name="debt_settle_unsuccess_server_error">Unable to settle %1$s\'s debt due to a server error</string>
    <string name="debt_settle_unsuccess_network_error">Unable to settle %1$s\'s debt due to a network error</string>
    <string name="action_edit_group">Edit group</string>
    <string name="group_edit_activity_title">Edit group</string>
    <string name="edit">Edit</string>
    <string name="group_edit_dialog_title">Confirm changes?</string>
    <string name="group_edit_saving_changes">Saving changes...</string>
    <string name="server_internal_error">Server internal error. Try again later.</string>
    <string name="error_invalid_fullname">Insert a valid fullname</string>
    <string name="error_email_not_available">This e-mail is already associated with an account</string>
    <string name="group_info_members_number">Members: %1$s</string>
    <string name="amministratore_gruppo">Group administrator</string>
    <string name="group_info_group_deleted_successfully">Group deleted successfully</string>
    <string name="group_info_group_not_present">Group does not exist anymore</string>
    <string name="group_info_dialog_delete_title">Delete group?</string>
    <string name="group_info_dialog_delete_message">Do you really want to delete this group? This action CAN NOT BE UNDONE and the group will be deleted also on the device of any member</string>
    <string name="action_show_group_info">Group info</string>
    <string name="cancel">Cancel</string>
    <string name="group_fragment_empty_message">No groups to show</string>
    <string name="payments">Payments</string>
    <string name="summary">Summary</string>
    <string name="debts">Debts</string>
    <string name="add_group_members_member_delete_title">Remove member?</string>
    <string name="add_group_members_member_delete_message">Do you want to remove %1$s?</string>
    <string name="remove">Remove</string>
    <string name="title_add_group_members_activity">Add Group Members</string>
    <string name="search">Search</string>
    <string name="notification_group_created">New group!</string>
    <string name="notification_group_created_msg">%1$s was created.</string>
    <string name="notification_group_modified">Group modified.</string>
    <string name="notification_group_modified_msg">%1$s was modified.</string>
    <string name="notification_group_deleted">Group deleted!</string>
    <string name="notification_group_deleted_msg">%1$s was deleted.</string>
    <string name="notification_group_member_added">New group!</string>
    <string name="notification_group_member_added_msg">%1$s added you to %2$s.</string>
    <string name="notification_group_member_added_save_msg">You were added to %1$s. group</string>
    <string name="notification_payment_created">New Payment</string>
    <string name="notification_payment_created_msg">%1$s was created.</string>
    <string name="notification_payment_modified">Payment modified</string>
    <string name="notification_payment_modified_msg">%1$s was modified.</string>
    <string name="notification_payment_deleted">Payment deleted!</string>
    <string name="notification_payment_deleted_msg">%1$s was deleted.</string>
    <string name="notification_debt_solved">Debt settled</string>
    <string name="notification_debt_solved_msg">A debt is solved.</string>
    <plurals name="notification_counter">
        <item quantity="one">1 notification</item>
        <item quantity="other">%d notifications</item>
    </plurals>
    <string name="edit_payment_success">Payment edited successfully!</string>
    <string name="debt_settlement">Debt settlement</string>
    <string name="to">To</string>
    <string name="for_string">For</string>
    <string name="payment_or_transfer">Payment or transfer?</string>
    <string name="add_payment_transfer_checkbox_text">This is a transfer between two people</string>
    <string name="paid_by_colon">Paid by:</string>
    <string name="for_string_colon">For:</string>
    <string name="to_string_colon">To:</string>
    <string name="given_by_string_colon">Given by:</string>
    <string name="all">All</string>
    <string name="hide_show_my_payments_hint">Show/hide my payments</string>
    <string name="error_invalid_amount_user">Cannot add a payment just for you!</string>
    <string name="title_activity_group_info_activity_scrolling">GroupInfoActivityScrolling</string>
    <string name="prompt_password_old">Old password</string>
    <string name="prompt_password_new">New password</string>
    <string name="prompt_password_new_confirm">Confirm password</string>
    <string name="prompt_change_password">Password change</string>
</resources>