<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_online_groups"
            android:icon="@drawable/ic_menu_camera"
            android:title="Online Groups" />
        <item
            android:id="@+id/nav_offline_groups"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Offline Groups" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/tools" />
    </group>

    <group>
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/logout" />
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/login" />
        </menu>
    </group>

</menu>
